--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -3,5 +3,6 @@
 <div *ngFor="let evento of eventos">
   <p><b>Tema:</b> {{ evento.tema }}</p>
   <p><b>Local:</b> {{ evento.local }}</p>
+  <p><b>Lote:</b> {{ evento.lote }}</p>
   <hr>
 </div>
