--- a/Front/ProEventos-App/src/app/app.component.html
+++ b/Front/ProEventos-App/src/app/app.component.html
@@ -1,12 +1,8 @@
+<app-nav></app-nav>
 
-<div class="container">
+<div class="container mt-3">
 
-  <h1>Eventos</h1>
   <app-eventos></app-eventos>
-
-  <h1>Palestrantes</h1>
-  <app-palestrantes></app-palestrantes>
-
 
   <router-outlet></router-outlet>
 
