--- a/Front/ProEventos-App/src/app/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/nav/nav.component.html
@@ -5,18 +5,33 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav" [collapse]="isCollapsed" [isAnimated]="true">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">ProEventos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Eventos</a>
+          <a class="nav-link active" aria-current="page" href="#">Eventos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Palestrantes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contatos</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown" dropdown>
+        <a dropdownToggle class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Vinícius
+        </a>
+        <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">
+          Perfil
+          </a>
+          <div role="separator" class="divider"></div>
+          <a class="dropdown-item" href="#">
+          Sair
+          </a>
+        </div>
         </li>
       </ul>
     </div>
