Trabalhando com sub-componentes e suas rotas

--- a/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
+++ b/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
@@ -1,1 +1,7 @@
-<app-titulo [titulo]="tituloTela"></app-titulo>
+<app-titulo
+  [tituloPrincipal]="'Contatos'"
+  [subtitulo]="'Gestão de contatos'"
+  [iconClass]="'fa  fa-address-book'"
+  [exibeBotao] = "false">
+</app-titulo>
+
