--- a/Front/ProEventos-App/src/app/components/palestrantes/palestrantes.component.html
+++ b/Front/ProEventos-App/src/app/components/palestrantes/palestrantes.component.html
@@ -1,1 +1,6 @@
-<app-titulo [titulo]="tituloTela"></app-titulo>
+<app-titulo
+  [tituloPrincipal]="'Palestrantes'"
+  [subtitulo]="'Gestão de palestrantes'"
+  [iconClass]="'fa fa-graduation-cap'"
+  [exibeBotao] = "false">
+</app-titulo>
