--- a/Front/ProEventos-App/src/app/components/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/perfil/perfil.component.html
@@ -1,1 +1,6 @@
-<app-titulo [titulo]="tituloTela"></app-titulo>
+<app-titulo
+  [tituloPrincipal]="'Perfil'"
+  [subtitulo]="'Gestão de perfis'"
+  [iconClass]="'fa fa-user-alt'"
+  [exibeBotao] = "false">
+</app-titulo>
