Sessão 8: reactive forms e mudança de layout

--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
@@ -7,7 +7,7 @@
 </app-titulo>
 
 <div class="card rounded shadow-sm">
-  <form>
+  <form [formGroup]="form">
     <div class="row p-3">
       <div class="col-lg-3 pt-1">
         <div class="card mb-3">
@@ -55,7 +55,8 @@
           </div>
           <div class="form-group col">
             <label>Título</label>
-            <select class="form-control">
+            <select class="form-control" formControlName="titulo"
+              [ngClass]="{'is-invalid': f.titulo.errors && f.titulo.touched}">
               <option value=""></option>
               <option value="0">Não Quero</option>
               <option value="Senhorita">Tecnólogo(a)</option>
@@ -66,36 +67,60 @@
               <option value="Senhorita">Doutor(a)</option>
               <option value="Senhorita">Pós Doc</option>
             </select>
+            <div class="invalid-feedback" *ngIf="f.titulo.errors?.required && f.titulo.touched">
+              titulo é obrigatório.
+            </div>
           </div>
           <div class="form-group col-sm-5">
             <label>Primeiro Nome</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="primeiroNome" [ngClass]="{'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.primeiroNome.errors?.required && f.primeiroNome.touched">
+              primeiro nome é obrigatório.
+            </div>
           </div>
           <div class="form-group col-sm-5">
             <label>Último nome</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="ultimoNome" [ngClass]="{'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.ultimoNome.errors?.required && f.ultimoNome.touched">
+              ultimo nome é obrigatório.
+            </div>
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-sm-5">
             <label>E-mail</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid': f.email.errors && f.email.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.email.errors?.required && f.email.touched">
+              email é obrigatório.
+            </div>
+            <div class="invalid-feedback" *ngIf="f.email.errors?.email && f.email.touched">
+              email é inválido.
+            </div>
           </div>
           <div class="form-group col-sm-4">
             <label>Telefone</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="telefone" [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.telefone.errors?.required && f.telefone.touched">
+              telefone é obrigatório.
+            </div>
           </div>
           <div class="form-group col-sm">
             <label>Função</label>
-            <select class="form-control">
+            <select class="form-control" formControlName="funcao" [ngClass]="{'is-invalid': f.funcao.errors && f.funcao.touched}">
               <option value=""></option>
               <option value="Participante">Participante</option>
               <option value="Palestrante">Palestrante</option>
             </select>
+            <div class="invalid-feedback" *ngIf="f.funcao.errors?.required && f.funcao.touched">
+              função é obrigatório.
+            </div>
           </div>
           <form-group class="col-12">
             <label>Descrição</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" formControlName="descricao" [ngClass]="{'is-invalid': f.descricao.errors && f.descricao.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.descricao.errors?.required && f.descricao.touched">
+              descrição é obrigatória.
+            </div>
           </form-group>
         </div>
         <div>
@@ -105,21 +130,33 @@
         <div class="form-row">
           <div class="form-group col-sm">
             <label>Senha</label>
-            <input type="password" class="form-control" />
+            <input type="password" class="form-control" formControlName="senha" [ngClass]="{'is-invalid': f.senha.errors && f.senha.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.senha.errors?.required && f.senha.touched">
+              senha é obrigatória.
+            </div>
+            <div class="invalid-feedback" *ngIf="f.senha.errors?.minlength && f.senha.touched">
+              senha deve conter no mínimo 6 caracteres.
+            </div>
           </div>
           <div class="form-group col-sm">
             <label>Confirmar Senha</label>
-            <input type="password" class="form-control" />
+            <input type="password" class="form-control" formControlName="confirmeSenha" [ngClass]="{'is-invalid': f.confirmeSenha.errors && f.confirmeSenha.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.confirmeSenha.errors?.required && f.confirmeSenha.touched">
+              confirmar senha é obrigatória.
+            </div>
+            <div class="invalid-feedback" *ngIf="f.confirmeSenha.errors?.mustMatch && f.confirmeSenha.touched">
+              confirmar senha deve ser igual a senha.
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="card-footer">
       <div class="d-flex">
-        <button class="btn btn-outline-secondary mr-auto border">
+        <button class="btn btn-outline-secondary mr-auto border" (click)="resetForm($event)">
           Cancelar Alteração
         </button>
-        <button class="btn btn-success">
+        <button class="btn btn-success" [disabled]="!form.valid">
           <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
           Salvar Alteração
         </button>
