--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -1,6 +1,4 @@
-
 <div class="card rounded shadow-sm p-2">
-
   <div class="d-flex">
     <div class="flex-fill pr-3">
       <div class="input-group mb-2">
@@ -11,73 +9,102 @@
           type="text"
           class="form-control"
           placeholder="buscar"
-          [(ngModel)]="FiltroLista">
+          [(ngModel)]="FiltroLista"
+        />
       </div>
     </div>
     <div>
-      <a class="d-flex btn btn-outline-primary" style="cursor: pointer;" routerLink="/eventos/novo">
+      <a
+        class="d-flex btn btn-outline-primary"
+        style="cursor: pointer"
+        routerLink="/eventos/novo"
+      >
         <i class="fa fa-plus-circle my-1"></i>
         <b class="ml-1 d-none d-sm-block">Novo</b>
       </a>
     </div>
-
   </div>
 
   <table class="table table-striped table-hover">
     <thead class="thead-dark">
-
-        <tr>
-          <th class="d-none d-md-table-cell">
-            <button type="button" class="btn btn-sm btn-outline-light" (click)="exibirImagem = !exibirImagem"
-            [attr.aria-expanded]="!exibirImagem" aria-controls="collapseBasic">{{exibirImagem ? 'exibir': 'ocultar' }}
-            <i class="{{exibirImagem ? 'fa fa-eye': 'fa fa-eye-slash' }}"></i>
-            </button>
-          </th>
-          <th class="d-none d-md-table-cell">#</th>
-          <th>Tema</th>
-          <th class="d-none d-md-table-cell">Local</th>
-          <th class="text-center">Data</th>
-          <th class="text-center d-none d-md-table-cell">Qtd Pessoas</th>
-          <th class="d-none d-md-table-cell">Lote</th>
-          <th class="text-center">Opções</th>
-        </tr>
+      <tr>
+        <th class="d-none d-md-table-cell">
+          <button
+            type="button"
+            class="btn btn-sm btn-outline-light"
+            (click)="exibirImagem = !exibirImagem"
+            [attr.aria-expanded]="!exibirImagem"
+            aria-controls="collapseBasic"
+          >
+            {{ exibirImagem ? "exibir" : "ocultar" }}
+            <i class="{{ exibirImagem ? 'fa fa-eye' : 'fa fa-eye-slash' }}"></i>
+          </button>
+        </th>
+        <th class="d-none d-md-table-cell">#</th>
+        <th>Tema</th>
+        <th class="d-none d-md-table-cell">Local</th>
+        <th class="text-center">Data</th>
+        <th class="text-center d-none d-md-table-cell">Qtd Pessoas</th>
+        <th class="d-none d-md-table-cell">Lote</th>
+        <th class="text-center">Opções</th>
+      </tr>
     </thead>
-    <tbody *ngIf="eventosFiltrados && eventosFiltrados.length">
-      <tr *ngFor="let ev of eventosFiltrados" style="cursor: pointer;" (click)="detalheEvento(ev.id)">
+    <tbody *ngIf="eventosFiltrados && eventosFiltrados?.length">
+      <tr
+        *ngFor="let ev of eventosFiltrados"
+        style="cursor: pointer"
+        (click)="detalheEvento(ev.id)"
+      >
         <td class="d-none d-md-table-cell">
-          <img [collapse]="exibirImagem" [isAnimated]="true" id="collapseBasic"  src="/assets/images/{{ev.imageUrl}}"
-          [style.width.px]="imagemLargura"
-          [style.margin.px]="imagemMargem">
+          <img
+            [collapse]="exibirImagem"
+            [isAnimated]="true"
+            id="collapseBasic"
+            src="/assets/images/{{ ev.imageUrl }}"
+            [style.width.px]="imagemLargura"
+            [style.margin.px]="imagemMargem"
+          />
         </td>
-        <td class="d-none d-md-table-cell">{{ev.id}}</td>
-        <td>{{ev.tema}}</td>
-        <td class="d-none d-md-table-cell">{{ev.local}}</td>
-        <td class="text-center">{{ev.dataEvento | DateFormatPipe}}</td>
-        <td class="text-center d-none d-md-table-cell">{{ev.qtdPessoas}}</td>
-        <td class="d-none d-md-table-cell"><!-- {{ev.lotes[0]?.nome | uppercase}} --></td>
+        <td class="d-none d-md-table-cell">{{ ev.id }}</td>
+        <td>{{ ev.tema }}</td>
+        <td class="d-none d-md-table-cell">{{ ev.local }}</td>
+        <td class="text-center">{{ ev.dataEvento | DateFormatPipe }}</td>
+        <td class="text-center d-none d-md-table-cell">{{ ev.qtdPessoas }}</td>
+        <td class="d-none d-md-table-cell">
+          {{ ev.lotes[0]?.nome | uppercase }}
+        </td>
         <td class="text-center">
           <div class="btn-group">
-            <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
+            <button
+              type="button"
+              class="btn btn-danger btn-sm"
+              tooltip="Excluir"
+              (click)="openModal($event, template, ev.id)"
+            >
               <i class="fa fa-trash"></i>
             </button>
           </div>
         </td>
       </tr>
     </tbody>
-    <tfoot *ngIf="!eventosFiltrados.length">
-      <tr colsapn="8">
-        <h5>Nenhum evento econtrado</h5>
+    <tfoot *ngIf="!eventosFiltrados?.length">
+      <tr>
+        <td colsapn="8" class="text-center">
+          <h5>Nenhum evento econtrado</h5>
+        </td>
       </tr>
     </tfoot>
   </table>
-
 </div>
-<!-- {{eventosFiltrados | json}} -->
 
 <ng-template #template>
   <div class="modal-body text-center">
-    <p>Tem certeza que quer deletar este Evento?</p>
-    <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
-    <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
+    <p>Tem certeza que quer deletar o evento de código {{ eventoId }}?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="decline()">
+      Não
+    </button>
   </div>
 </ng-template>
