Sessao 11 - Eventos e Lotes

--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -79,7 +79,7 @@
               type="button"
               class="btn btn-danger btn-sm"
               tooltip="Excluir"
-              (click)="openModal($event, template, ev.id)"
+              (click)="removerLote($event, template, ev.id)"
             >
               <i class="fa fa-trash"></i>
             </button>
