--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -1,7 +1,6 @@
 <div class="card rounded shadow-sm">
   <form [formGroup]="form">
     <div class="p-3">
-
       <div class="form-row">
         <div class="form-group col-md-12">
           <label>Tema</label>
@@ -52,11 +51,14 @@
         <div class="form-group col-md-4">
           <label>Data e Hora</label>
           <input
-            type="datetime-local"
+            type="datetime"
             class="form-control"
             formControlName="dataEvento"
+            value=" {{ evento.dataEvento | DateFormatPipe }}"
             placeholder=""
             [ngClass]="cssValidator(f.dataEvento)"
+            bsDatepicker
+            [bsConfig]="bsConfig"
           />
           <div
             class="invalid-feedback"
@@ -159,7 +161,11 @@
         >
           Cancelar Alteração
         </button>
-        <button class="btn btn-success" [disabled]="!form.valid" (click)="salvar()">
+        <button
+          class="btn btn-success"
+          [disabled]="!form.valid"
+          (click)="salvar()"
+        >
           <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
           Salvar Evento
         </button>
@@ -167,3 +173,133 @@
     </div>
   </form>
 </div>
+
+<div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">
+  <div class="p-3">
+    <div class="d-flex border-bottom">
+      <h2 class="mr-auto">Lotes do Evento</h2>
+      <h2>
+        <i class="fas fa-money-bill-wave"></i>
+      </h2>
+    </div>
+    <p>Clique em Lote para adicionar e preencher novos Lotes</p>
+    <div class="form-row p-1">
+      <div class="col" [formGroup]="form">
+        <div
+          formArrayName="lotes"
+          *ngFor="let lote of lotes.controls; let i = index"
+        >
+          <fieldset [formGroupName]="i" class="form-group">
+            <legend class="d-flex justify-content-between">
+              {{ retornaNomeLote(lotes.get(i+'.nome').value)}}
+              <button
+                class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex"
+                tooltip="Excluir Lote"
+                [adaptivePosition]="false"
+                [delay]="500"
+                placement="left"
+                (click)="removerLote($event, templateLote, i)"
+              >
+                <i class="fa fa-window-close my-1"></i>
+                <b class="ml-1 d-none d-sm-block">Excluir</b>
+              </button>
+            </legend>
+            <div class="row">
+              <div class="form-group col-md-4">
+                <label>Nome</label>
+                <input
+                  [ngClass]="cssValidator(lotes.get(i + '.nome'))"
+                  type="text"
+                  class="form-control"
+                  formControlName="nome"
+                  placeholder="Lote"
+                />
+              </div>
+              <div class="form-group col-md-4">
+                <label>Quantidade</label>
+                <input
+                  [ngClass]="cssValidator(lotes.get(i + '.quantidade'))"
+                  type="text"
+                  class="form-control"
+                  formControlName="quantidade"
+                  placeholder="000"
+                />
+              </div>
+              <div class="form-group col-md-4">
+                <label>Preço</label>
+                <input
+                  [ngClass]="cssValidator(lotes.get(i + '.preco'))"
+                  type="text"
+                  currencyMask
+                  class="form-control"
+                  currencyMask
+                  formControlName="preco"
+                  placeholder="R$ 0,00"
+
+                />
+              </div>
+              <div class="form-group col-md-4">
+                <label>Data Início</label>
+                <input
+                  [ngClass]="cssValidator(lotes.get(i + '.dataInicio'))"
+                  type="datetime"
+                  class="form-control"
+                  value="{{
+                    lotes.get(i + '.dataInicio').value | date : 'dd/MM/yyyy'
+                  }}"
+                  placeholder="01/01/2019"
+                  bsDatepicker
+                  (bsValueChange)="mudarValorData($event, i, 'dataInicio')"
+                />
+              </div>
+              <div class="form-group col-md-4">
+                <label>Data Fim</label>
+                <input
+                  [ngClass]="cssValidator(lotes.get(i + '.dataFim'))"
+                  type="datetime"
+                  class="form-control"
+                  value="{{
+                    lotes.get(i + '.dataFim').value | date : 'dd/MM/yyyy'
+                  }}"
+                  placeholder="01/01/2019"
+                  bsDatepicker
+                  (bsValueChange)="mudarValorData($event, i, 'dataFim')"
+                />
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      </div>
+    </div>
+    <button (click)="adicionarLote()" class="d-flex btn btn-outline-primary">
+      <i class="fa fa-plus-circle my-1"></i>
+      <b class="ml-1">Lote</b>
+    </button>
+  </div>
+  <div class="card-footer">
+    <div class="d-flex">
+      <button class="btn btn-outline-secondary mr-auto border">
+        Cancelar Alteração
+      </button>
+      <button class="btn btn-success" [disabled]="!form.controls.lotes.valid" (click)="salvarLotes()" [disabled]="">
+        Salvar Lotes
+      </button>
+    </div>
+  </div>
+</div>
+<br />
+
+<ng-template #templateLote>
+  <div class="modal-body text-center">
+    <p>
+      Deseja remover o <b>{{ loteAtual.nome }}</b
+      >?
+    </p>
+    <button type="button" class="btn btn-default" (click)="confirm()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="decline()">
+      Não
+    </button>
+  </div>
+</ng-template>
